--- a/portfolio.html
+++ b/portfolio.html
@@ -1,4 +1,4 @@
-<!DOCYPE html>
+<!DOCTYPE html>
 <html lang="en-us">
     <head>
         <meta charset="UTF-8">
@@ -6,5 +6,96 @@
         <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     </head>
     <body>
+
+      <div id="top-div">
+        <nav>
+          <h1 id="page-name">Thomas Harris</h1>
+          <div id="menu-links">
+            <span class="menu-link-text"><a href="./index.html">About</a></span>
+            <span class="menu-link-text"><a href="./portfolio.html">Portfolio</a></span>
+            <span class="menu-link-text"><a href="./contact.html">Contact</a></span>
+          </div>
+        </nav>
+      </div>
+      <hr />
+
+      <div id="content-area" class="clear">
+        <section id="main-section" class="portfolio-page">
+          <h2 class="card-header">Portfolio</h2>
+          <hr />
+
+          <div id="portfolio-links">
+
+            <div class="portfolio-button left-item">
+                  <a href="" target="_blank">
+                     <img src="./assets/images/technics-q-c-640-480-1.jpg"
+                          alt="Man holding ipad"  class="portfolio-image"/>
+                  </a>
+            </div>
+
+            <div class="portfolio-button right-item">
+                  <a href="" target="_blank">
+                     <img src="./assets/images/technics-q-c-640-480-3.jpg"
+                          alt="Laptop computer on desk" class="portfolio-image" />
+                  </a>
+            </div>
+
+            <div class="portfolio-button left-item clear">
+                  <a href="" target="_blank">
+                     <img src="./assets/images/technics-q-c-640-480-4.jpg"
+                          alt="Circuit board"  class="portfolio-image" />
+                  </a>
+            </div>
+
+            <div class="portfolio-button right-item">
+                  <a href="" target="_blank">
+                     <img src="./assets/images/technics-q-c-640-480-8.jpg"
+                          alt="Donut shaped wire coil"  class="portfolio-image" />
+                  </a>
+            </div>
+
+            <div class="portfolio-button left-item clear">
+                  <a href="" target="_blank">
+                     <img src="./assets/images/technics-q-c-640-480-9.jpg"
+                          alt="LED TV"  class="portfolio-image" />
+                  </a>
+            </div>
+
+          </div>
+
+          <span class="portfolio-label" id="pflabel1">Hangman</span>
+          <span class="portfolio-label" id="pflabel2">RPG Game</span>
+          <span class="portfolio-label" id="pflabel3">Trivia Game</span>
+          <span class="portfolio-label" id="pflabel4">Rutgers Info Widget</span>
+          <span class="portfolio-label" id="pflabel5">Rock Paper Scissors</span> 
+
+        </section>
+          
+        <section id="sidebar-section">
+          <h3 class="social-elem">Connect with Me</h3>
+          <div id="social-buttons" class="social-elem">
+            <span><a href="https://github.com/tharrisoc" 
+                     target="_blank">
+                     <img class="social-button" 
+                          src="./assets/images/if_github_square_black_107109.png" 
+                          alt="github icon button" />
+            </a></span>
+
+            <span><a href="https://www.linkedin.com/in/thomas-w-harris"
+                     target="_blank">
+                     <img class="social-button" 
+                          src="./assets/images/if_linkedin_square_color_107091.png"
+                          alt="LinkedIn icon button" />
+            </a></span>
+
+            <span><a href="https://stackoverflow.com/users/9070437/jondoe"
+                     target="_blank">
+                     <img class="social-button" 
+                          src="./assets/images/if_stackoverflow_273179.png"
+                          alt="stackoverflow icon button" />
+            </a></span>
+          </div>
+        </section>  
+      </div>
     </body>
   </html>
