Replaced placeholder applications with actual applications

--- a/portfolio.html
+++ b/portfolio.html
@@ -27,48 +27,55 @@
           <div id="portfolio-links">
 
             <div class="portfolio-button left-item">
-                  <a href="" target="_blank">
-                     <img src="./assets/images/technics-q-c-640-480-1.jpg"
-                          alt="Man holding ipad"  class="portfolio-image"/>
+                  <a href="https://github.com/tharrisoc/bamazon" target="_blank">
+                     <img src="./assets/images/ScreenShot011.png"
+                          alt="MySQL Result Set" class="portfolio-image"/>
                   </a>
             </div>
 
             <div class="portfolio-button right-item">
-                  <a href="" target="_blank">
-                     <img src="./assets/images/technics-q-c-640-480-3.jpg"
-                          alt="Laptop computer on desk" class="portfolio-image" />
+                  <a href="https://github.com/tharrisoc/WordGuess" target="_blank">
+                     <img src="../img/WordGuessSample.png"
+                          alt="WordGuess Sample Interaction" class="portfolio-image" />
                   </a>
             </div>
 
             <div class="portfolio-button left-item clear">
-                  <a href="" target="_blank">
-                     <img src="./assets/images/technics-q-c-640-480-4.jpg"
-                          alt="Circuit board"  class="portfolio-image" />
+                  <a href="https://github.com/tharrisoc/liri-node-app" target="_blank">
+                     <img src="../img/LIRISample.png"
+                          alt="LIRI Sample Interaction" class="portfolio-image" />
                   </a>
             </div>
 
             <div class="portfolio-button right-item">
-                  <a href="" target="_blank">
-                     <img src="./assets/images/technics-q-c-640-480-8.jpg"
-                          alt="Donut shaped wire coil"  class="portfolio-image" />
+                  <a href="../hangman" target="_blank">
+                     <img src="../img/HangmanScreenShot.png"
+                          alt="Hangman Game" class="portfolio-image" />
                   </a>
             </div>
 
             <div class="portfolio-button left-item clear">
-                  <a href="" target="_blank">
-                     <img src="./assets/images/technics-q-c-640-480-9.jpg"
-                          alt="LED TV"  class="portfolio-image" />
+                  <a href="../week-4-game" target="_blank">
+                     <img src="../img/CrystalsCollector.png"
+                          alt="Crystals Collector Game" class="portfolio-image" />
                   </a>
             </div>
 
+            <div class="portfolio-button right-item">
+              <a href="../basictriviagame" target="_blank">
+                 <img src="../img/TriviaGame.png"
+                      alt="Trivia Game" class="portfolio-image" />
+              </a>
+            </div>
           </div>
 
-          <span class="portfolio-label" id="pflabel1">Hangman</span>
-          <span class="portfolio-label" id="pflabel2">RPG Game</span>
-          <span class="portfolio-label" id="pflabel3">Trivia Game</span>
-          <span class="portfolio-label" id="pflabel4">Rutgers Info Widget</span>
-          <span class="portfolio-label" id="pflabel5">Rock Paper Scissors</span> 
-
+          <span class="portfolio-label" id="pflabel1">bamazon</span>
+          <span class="portfolio-label" id="pflabel2">Word Guess</span>
+          <span class="portfolio-label" id="pflabel3">LIRI</span>
+          <span class="portfolio-label" id="pflabel4">Hangman Game</span>
+          <span class="portfolio-label" id="pflabel5">Crystals Collector</span>
+          <span class="portfolio-label" id="pflabel6">Trivia Game</span>
+          
         </section>
           
         <section id="sidebar-section">
